--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ html {
 }
 
 body {
-    background: #2C2141;
+    
+    background: #545454;
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,10 +17,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.background {
 
+    z-index: -1;
+}
 .main {
 
-    background-color: whitesmoke;
+    background-image:url(/assets/prąd.png);
     border-radius: 16px;
     width: 624px;
     margin: 16px;
@@ -28,12 +33,14 @@ body {
 .person {
     display: flex;
     align-items: flex-start;
+    margin-left: 30px;
     
 
 }
 
 .person__info {
     margin-bottom: 24px;
+   
 }
 .person__description {
     font-style: 16px;
@@ -61,7 +68,7 @@ body {
 }
 
 .special {
-    color: #ED6D05;
+    color: #ed0505;
     font-weight: normal;
 }
 
@@ -72,6 +79,6 @@ body {
 }
 
 .person__picture {
-    margin-right: 32px;
+    margin-right: 50px;
    border-radius: 50%;
 }
